* AC_PROG_INSTALL looks for install.sh in the directory specified by
  AC_CONFIG_AUXDIR, or srcdir or srcdir/.. or srcdir/../.. by default.
* AC_DEFINE no longer prints anything, because of the new result reporting
  mechanism (AC_MSG_CHECKING and AC_MSG_RESULT).
* AC_VERBOSE pays attention to --quiet/--silent, not --verbose.

** New utilities:
* autoscan to generate a preliminary configure.in for a package by
  scanning its source code for commonly used nonportable functions,
  programs, and header files.
* autoreconf to recursively remake configure and configuration header
  files in a source tree.
* autoupdate to update a configure.in to use the new macro names.
* shindent to produce consistent indentation in shell scripts, such as
  configure. 
* ifnames to list the symbols used in #if and #ifdef directives in a
  source tree.

* Changed utilities:
* autoheader can take pieces of acconfig.h to replace config.h.{top,bot}.

Major changes in release 1.11:

* AC_PROG_INSTALL calls install.sh with the -c option.
* AC_SET_MAKE cleans up after itself.
* AC_OUTPUT sets prefix and exec_prefix if they weren't set already.
* AC_OUTPUT prevents shells from looking in PATH for config.status.

Plus a few other bug fixes.

Major changes in release 1.10:

* autoheader uses config.h.bot if present, analogous to config.h.top.
* AC_PROG_INSTALL looks for install.sh in srcdir or srcdir/.. and
  never uses cp.
* AC_PROG_CXX looks for cxx as a C++ compiler.

Plus several bugs fixed.

Major changes in release 1.9:

* AC_YYTEXT_POINTER replaces AC_DECLARE_YYTEXT.
* AC_SIZEOF_TYPE generates the cpp symbol name automatically,
  and autoheader generates entries for those names automatically.
* AC_FIND_X gets the result from xmkmf correctly.
* AC_FIND_X assumes no X if --without-x was given.
* AC_FIND_XTRA adds libraries to the variable X_EXTRA_LIBS.
* AC_PROG_INSTALL finds OSF/1 installbsd.

Major changes in release 1.8:

** New macros: