@@ -2092,13 +2092,16 @@ define a symbol if the function is available, consider using
 @code{AC_CHECK_FUNCS} instead.
 @end defmac
 
-@defmac AC_CHECK_FUNCS (@var{function}@dots{})
+@defmac AC_CHECK_FUNCS (@var{function}@dots{} @r{[}, @var{action}@r{]})
 @maindex CHECK_FUNCS
 @vindex HAVE_@var{function}
 For each given @var{function} in the whitespace-separated argument list
 that is available, define @code{HAVE_@var{function}} (in all caps).
 @xref{Specific Tests}, for a precise definition of ``define'' as it
-is used here.  If the functions might be in libraries other than the
+is used here.  If @var{action} is given, it is shell code to execute
+when one of the functions is found.  You can give an @var{action} of
+@samp{break} to break out of the loop on the first match.
+If the functions might be in libraries other than the
 default C library, first call @code{AC_CHECK_LIB} for those libraries.
 @end defmac
 
@@ -2110,13 +2113,16 @@ you just want to define a symbol if the header file is available,
 consider using @code{AC_CHECK_HEADERS} instead.
 @end defmac
 
-@defmac AC_CHECK_HEADERS (@var{header-file}@dots{})
+@defmac AC_CHECK_HEADERS (@var{header-file}@dots{} @r{[}, @var{action}@r{]})
 @maindex CHECK_HEADERS
 @vindex HAVE_@var{header}
 For each given system header file @var{header-file} in the
 whitespace-separated argument list that exists, define
 @code{HAVE_@var{header-file}} (in all caps).  @xref{Specific Tests}, for
 a precise definition of ``define'' as it is used here.
+If @var{action} is given, it is shell code to execute
+when one of the header files is found.  You can give an @var{action} of
+@samp{break} to break out of the loop on the first match.
 @end defmac
 
 @defmac AC_CHECK_SIZEOF (@var{type})
